--- a/src/index.css
+++ b/src/index.css
@@ -69,7 +69,7 @@ section > h2, section > h5{
 }
 
 section > h2{
-    color: var(--color-primary);
+    color: var(--color-white);
     margin-bottom: 3rem;
 }
 
