--- a/src/components/services/services.css
+++ b/src/components/services/services.css
@@ -1,7 +1,9 @@
 .services__container{
-    display: grid;
-    grid-template-columns: repeat(3,1fr);
+    display: flex;
+    justify-content: center;
+    /* grid-template-columns: repeat(3,1fr); */
     gap: 3rem;
+    text-align: center;
 }
 
 .services{
@@ -10,6 +12,7 @@
     border: 1px solid var(--color-primary);
     height: fit-content;
     transition: var(--transition);
+    width: 300px;
 }
 
 .services:hover{
